# django-webpack-boilerplate

./: .gitignore  Procfile  Procfile.dev  README.md  manage.py  package.json  pyproject.toml  requirements.txt  webpack.config.js
app/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
apps/example/: views.py
apps/example/templates/example/: index.html
assets/: app.css  app.js  chunk.js
boilerplate/: asgi.py  settings.py  urls.py  wsgi.py
